--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1,7 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Familjen+Grotesk:wght@400;700&family=Roboto:wght@300;400;700&family=Tajawal:wght@300;400;700&display=swap");
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+
 :root {
   --main-color: #6145fc;
 }
@@ -57,9 +55,144 @@ header .register .btn-sign {
   margin: auto;
   height: calc(100vh - 97px);
   width: 80%;
-  padding-top: 60px;
+  padding-top: 20px;
+  display: grid;
+  grid-template-columns: repeat(5, minmax(0px, 1fr));
+  grid-template-areas: "one one two two two";
+}
+@media (max-width: 991px) {
+  .container {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(5, minmax(0px, 1fr));
+
+    grid-template-areas:
+      "one"
+      "one"
+      "two"
+      "two"
+      "two";
+  }
+}
+.container .chatInfo {
   display: flex;
   flex-direction: column;
+  grid-area: one;
+  width: 100%;
+  overflow-y: auto;
+  background-color: #fff;
+  padding: 15px;
+  overflow-y: auto;
+  background-color: #fff;
+  padding: 15px;
+}
+@media (max-width: 991px) {
+  .container .chatInfo {
+    overflow-y: auto;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-areas:
+      "one"
+      "two"
+      "three";
+  }
+  .container .chatInfo .myInfo {
+    grid-area: one;
+    max-width: 100%;
+    padding: 0px 10px !important;
+  }
+  .container .chatInfo .chats {
+    grid-area: two;
+    max-width: 100%;
+  }
+  .container .chatInfo .addChat {
+    grid-area: three;
+    max-width: 100%;
+    padding: 0px 10px !important;
+  }
+}
+.container .chatInfo .myInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 20px;
+  border-radius: 6px;
+  background-color: #eee;
+}
+.container .chatInfo .myInfo h2 {
+  text-transform: capitalize;
+
+  color: var(--main-color);
+}
+.container .chatInfo .myInfo h4 {
+  color: #777;
+}
+.container .chatInfo .chats {
+  margin: 10px 0px;
+  padding: 20px;
+  border-radius: 6px;
+  overflow-y: auto;
+  background-color: #eee;
+}
+.container .chatInfo .addChat {
+  display: flex;
+  padding: 10px;
+  background-color: #fff;
+  justify-content: space-between;
+  align-items: center;
+}
+.container .chatInfo .addChat .addInput {
+  flex-basis: 65%;
+  background-color: #eee;
+  outline: none;
+  padding: 10px;
+  font-size: 17px;
+  color: var(--main-color);
+  border-radius: 8px;
+  border: 1px solid var(--main-color);
+}
+.container .chatInfo .addChat .addBtn {
+  flex-basis: 30%;
+  background-color: #eee;
+  outline: none;
+  padding: 10px 10px;
+  border-radius: 8px;
+  font-size: 17px;
+  color: var(--main-color);
+  cursor: pointer;
+  border: 1px solid var(--main-color);
+}
+.container .chatInfo .chats .listChat .nameFriend {
+  list-style: none;
+  padding: 10px;
+  background-color: #fff;
+  border-radius: 8px;
+  margin: 15px 0px;
+  color: #777;
+  font-size: 18px;
+  cursor: pointer;
+  position: relative;
+}
+.container .chatInfo .chats .listChat .nameFriend::after {
+  content: "";
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  border-radius: 50%;
+  top: 16px;
+  right: 16px;
+}
+.container .chatInfo .chats .listChat .nameFriend.offline::after {
+  background-color: tomato;
+}
+.container .chatInfo .chats .listChat .nameFriend.active::after {
+  background-color: green;
+}
+.container .msgInfo {
+  display: flex;
+  flex-direction: column;
+  grid-area: two;
+  width: 100%;
 }
 .container .message-box {
   margin: 0px auto;
@@ -153,7 +286,7 @@ header .register .btn-sign {
   margin: 0px auto;
   width: 600px;
   max-width: 100%;
-  padding: 20px;
+  padding: 20px 20px 0px 20px;
 }
 .container #form .element {
   width: 100%;
