--- a/client/css/style.css
+++ b/client/css/style.css
@@ -51,67 +51,59 @@ header .register .btn-sign {
 #logout {
   display: none;
 }
-.container {
-  margin: auto;
-  height: calc(100vh - 97px);
-  width: 80%;
-  padding-top: 20px;
+.main {
   display: grid;
-  grid-template-columns: repeat(5, minmax(0px, 1fr));
-  grid-template-areas: "one one two two two";
+  grid-template-columns: repeat(6, minmax(0, 1fr));
+  grid-template-areas: "one two two two two two";
+}
+.container {
+  height: calc(100vh - 97px);
+  grid-area: two;
+  padding-top: 20px;
 }
 @media (max-width: 991px) {
-  .container {
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(5, minmax(0px, 1fr));
-
-    grid-template-areas:
-      "one"
-      "one"
-      "two"
-      "two"
-      "two";
-  }
 }
-.container .chatInfo {
+.chatInfo {
+  grid-area: two;
+  z-index: 999;
   display: flex;
   flex-direction: column;
-  grid-area: one;
-  width: 100%;
-  overflow-y: auto;
+  justify-content: space-between;
+  height: calc(100vh - 97px);
+  transition: all 0.4s ease;
+  box-shadow: 0px 4px 5px gray;
   background-color: #fff;
   padding: 15px;
-  overflow-y: auto;
   background-color: #fff;
   padding: 15px;
+  position: fixed;
+  transform: translateX(-95%);
+  left: 0px;
+}
+.chatInfo .arrow {
+  position: absolute;
+  top: 50%;
+  right: -23px;
+  font-size: 20px;
+  color: white;
+  background-color: var(--main-color);
+  border-radius: 50%;
+  border: none;
+  padding: 12px;
+  outline: none;
 }
 @media (max-width: 991px) {
-  .container .chatInfo {
-    overflow-y: auto;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-areas:
-      "one"
-      "two"
-      "three";
+  .chatInfo {
+    width: 80%;
   }
-  .container .chatInfo .myInfo {
-    grid-area: one;
-    max-width: 100%;
-    padding: 0px 10px !important;
+  .chatInfo .addChat {
+    flex-direction: column;
   }
-  .container .chatInfo .chats {
-    grid-area: two;
-    max-width: 100%;
-  }
-  .container .chatInfo .addChat {
-    grid-area: three;
-    max-width: 100%;
-    padding: 0px 10px !important;
+  .chatInfo .addChat input {
+    margin-bottom: 8px;
   }
 }
-.container .chatInfo .myInfo {
+.chatInfo .myInfo {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -119,29 +111,43 @@ header .register .btn-sign {
   border-radius: 6px;
   background-color: #eee;
 }
-.container .chatInfo .myInfo h2 {
+.chatInfo .myInfo h2 {
   text-transform: capitalize;
 
   color: var(--main-color);
 }
-.container .chatInfo .myInfo h4 {
+.chatInfo .myInfo h4 {
   color: #777;
 }
-.container .chatInfo .chats {
+.chatInfo .chats {
   margin: 10px 0px;
   padding: 20px;
   border-radius: 6px;
   overflow-y: auto;
   background-color: #eee;
 }
-.container .chatInfo .addChat {
+.chatInfo .addChat {
   display: flex;
   padding: 10px;
   background-color: #fff;
   justify-content: space-between;
   align-items: center;
 }
-.container .chatInfo .addChat .addInput {
+.chatInfo #chatIds #msgCopied {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 6px;
+  width: fit-content;
+  color: #fff;
+  border-radius: 5px;
+  z-index: 10;
+  opacity: 0.7;
+  background-color: #4caf50;
+  /* display: none; */
+  transition: all 0.3s ease;
+}
+.chatInfo .addChat .addInput {
   flex-basis: 65%;
   background-color: #eee;
   outline: none;
@@ -151,7 +157,7 @@ header .register .btn-sign {
   border-radius: 8px;
   border: 1px solid var(--main-color);
 }
-.container .chatInfo .addChat .addBtn {
+.chatInfo .addChat .addBtn {
   flex-basis: 30%;
   background-color: #eee;
   outline: none;
@@ -162,7 +168,7 @@ header .register .btn-sign {
   cursor: pointer;
   border: 1px solid var(--main-color);
 }
-.container .chatInfo .chats .listChat .nameFriend {
+.chatInfo .chats .listChat .nameFriend {
   list-style: none;
   padding: 10px;
   background-color: #fff;
@@ -173,7 +179,7 @@ header .register .btn-sign {
   cursor: pointer;
   position: relative;
 }
-.container .chatInfo .chats .listChat .nameFriend::after {
+.chatInfo .chats .listChat .nameFriend::after {
   content: "";
   width: 10px;
   height: 10px;
@@ -182,17 +188,21 @@ header .register .btn-sign {
   top: 16px;
   right: 16px;
 }
-.container .chatInfo .chats .listChat .nameFriend.offline::after {
+.chatInfo .chats .listChat .nameFriend.offline::after {
   background-color: tomato;
 }
-.container .chatInfo .chats .listChat .nameFriend.active::after {
+.chatInfo .chats .listChat .nameFriend.active::after {
   background-color: green;
 }
 .container .msgInfo {
   display: flex;
-  flex-direction: column;
-  grid-area: two;
+  flex-direction: row;
   width: 100%;
+}
+@media (max-width: 992px) {
+  .container .msgInfo {
+    flex-direction: column;
+  }
 }
 .container .message-box {
   margin: 0px auto;
@@ -299,7 +309,7 @@ header .register .btn-sign {
   background: #fff;
   color: var(--main-color);
   border-radius: 12px;
-  width: 80%;
+  width: 70%;
   font-size: 18px;
   outline: none;
   margin-left: 7px;
