--- a/client/css/style.css
+++ b/client/css/style.css
@@ -227,6 +227,7 @@ header .register .btn-sign {
 .chatInfo .chats .listChat .nameFriend {
   list-style: none;
   padding: 10px;
+  text-transform: capitalize;
   background-color: #fff;
   border-radius: 8px;
   margin: 15px 0px;
@@ -244,6 +245,9 @@ header .register .btn-sign {
   top: 16px;
   right: 16px;
 }
+.chatInfo .chats .listChat span {
+  display: none;
+}
 .chatInfo .chats .listChat .nameFriend.offline::after {
   background-color: tomato;
 }
@@ -252,7 +256,7 @@ header .register .btn-sign {
 }
 .container .msgInfo {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   width: 100%;
 }
 @media (max-width: 992px) {
